modified layout of product-view & added wishlist, share options in it

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
   <meta name="theme-color" content="#1976d2">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=dEzl2gITHZCrxHiMiFQHHwQ9pjk=&libraries=places"
+  async
+  defer
+></script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
