--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  
+
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#682f12">
   <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALWkH-W_uEo5yQ8-CUAkqek-dsGG6PDDQ&libraries=places"
   async
